# rust_syscall_searcher

./: Cargo.toml  README.md
src/: calling_conventions.rs  main.rs  syscall.rs
